--- a/PROJECT-REACT-JAVA/Barber_Booking/src/css/style.css
+++ b/PROJECT-REACT-JAVA/Barber_Booking/src/css/style.css
@@ -59,6 +59,64 @@ Primary use:
 html {
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
+
+/* price */
+.prices-container {
+  padding: 30px;
+  background-color: #fff;
+  border-radius: 12px;
+  margin: 20px auto;
+  max-width: 800px;
+}
+
+.prices-title {
+  font-style: italic;
+  color: #f0a500;
+  margin-bottom: 20px;
+  border-bottom: 2px solid #f0a500;
+  padding-bottom: 10px;
+  font-weight: 700;
+  font-size: 28px;
+}
+
+.price-item {
+  margin-bottom: 20px;
+}
+
+.price-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.price-name {
+  font-weight: 600;
+  font-size: 18px;
+  white-space: nowrap; /* tránh xuống dòng tên */
+}
+
+.price-dots {
+  flex-grow: 1;
+  border-bottom: 1px dotted #ccc;
+  margin: 0 10px;
+}
+
+.price-price {
+  font-weight: 700;
+  font-size: 18px;
+  color: #f0a500;
+  white-space: nowrap;
+}
+
+.price-description {
+  margin-top: 5px;
+  color: #555;
+  font-size: 14px;
+}
+
 *,
 *:before,
 *:after {
